# yandex-search

./: AGENTS.md  LICENSE  README.md  README.ru.md  llms.txt  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: README.en.md  USAGE.md
